Fix highlight in dark mode

--- a/main.scss
+++ b/main.scss
@@ -551,7 +551,7 @@ span.checkmark {
   iframe {
     // filter: invert(1) hue-rotate(180deg) !important;
   }
-  .roam-highlight,
+  .rm-highlight,
   .block-highlight-yellow {
     background-color: hsl(51, 60%, 22%) !important;
   }
